trying to fix github img on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ align-content: center;
 }
 
 #gh-img{
-  width: 100%;
+  width: auto;
   height: 50%;
 }
 
